name:                twitch-tui
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/twitch-tui#readme
license:             BSD3
license-file:        LICENSE
author:              Donovan Miller
maintainer:          example@example.com
copyright:           2018 Donovan Miller
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable twitch-tui
  ghc-options: -threaded -O2
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       brick,
                       vty,
                       text,
                       vector,
                       fuzzyset,
                       process,
                       aeson,
                       req,
                       data-default-class,
                       bytestring
